style.css
/* <===================TYPOGRAPHY & FONTS===================> */

@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Quicksand&display=swap');

/* <===================CSS VARIABLES===================> */

:root{
    --h1-size: 7rem;
    --h2-size: 2.1rem;
    --h3-size: 1.7rem;
    --text-size: 1.3rem;
    --horizontal-margin-spacing:6rem;
    --grey-color-light: rgba(232,230,230,.6);
    --grey-color: rgba(232,230,230,1);
}

/* <===================UNIVERSAL CSS===================> */

*{
    box-sizing: border-box;
    margin: 0;
    font-family: 'Cinzel', serif;
    color: #212121;
}
html{
    scroll-behavior: smooth;
}
.hz-margin{
    padding: 0 var(--horizontal-margin-spacing);
}
h1{
    font-size: var(--h1-size);
    font-weight: 500;
    line-height: var(--h1-size);
}
h2{
    font-size: var(--h2-size);
    font-weight: bold;
}
h3{
    font-size: var(--h3-size);
    font-weight: 500;
}
.reveal{
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: 1s all ease;
  }
  
  .reveal.active{
    transform: translateY(0);
    opacity: 1;
  }
.text{
    font-family: 'Quicksand', sans-serif;
    font-size: var(--text-size);
    line-height: 1.3rem;
}
.huge-btn{
    display: block;
    font-size: 1rem;
    background: transparent;
    border: 1px solid #212121;
    padding: 25px 50px;
    border-radius: 50px;
    width: fit-content;
    margin: 30px 0;
}
.huge-btn:hover{
    color: grey;
    border-color: grey;
}
.v-reposition-container{
    position: absolute;
    left: 0;
    width: 100%;
}
.h-reposition-container{
    width: 100%;
    position: relative;
    top: 100vh;
}
/* <===================NAVBAR===================> */

nav{
    height: 3vh;
    width: 100%;
    margin-bottom: 20vh;
}
label.logo{
    font-size: 35px;
    line-height: 80px;
    padding: 0 0 0 30px;
    font-weight: bold;
}
nav ul{
    float: right;
    margin-right: 20px;
    list-style: none;
}
nav ul li{
    display: inline-block;
    line-height: 80px;
    margin: 0 5px;
}
nav ul li a{
    font-family: 'Quicksand', sans-serif;
    font-size: 17px;
    padding: 7px 13px;
    border-radius: 3px;
    text-transform: uppercase;
    text-decoration: none;
}
a:hover{
    color: orange;
    transition: .5s;
}
.checkbtn{
    font-size: 30px;
    float: right;
    line-height: 80px;
    margin-right: 40px;
    cursor: pointer;
    display: none;
}
#check{
    display: none;
}
@media (max-width:1000px){
    label.logo{
        font-size: 20px;
    }
    nav ul li a{
        font-size: 10px;
    }
    html{
        font-size: 10px;
    }
}
@media (max-width:570px){
    .checkbtn{
        display: block;
    }
    ul{
        position: fixed;
        width: 100%;
        height: 100vh;
        backdrop-filter: blur(5px);
        top: 80px;
        font-weight: bold;
        left: -100%;
        text-align: center;
        transition: all .5s;
    }
    nav ul li{
        display: block;
        margin: 50px 0;
        line-height: 30px;
    }
    nav li ul a{
        font-size: 20px;
    }
    a:hover, a.active{
        background: none;
        color: grey;
    }
    #check:checked ~ ul{
        left: 0;
    }
}


/* <===================HOME===================> */

.container-out{
    margin-top: 10vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.home-img{
    background-image: url("./assests/photo1.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;      /* stop tiling */
    background-position: center center;   /* consistent centering */
    background-size: cover;               /* keep cover */
    background-attachment: scroll;        /* IMPORTANT: avoid fixed for parallax */
    position: relative;                   /* create stacking context */
    overflow: hidden;                     /* hide any bleed */
    will-change: background-position;     /* hint for smoother animation */
    backface-visibility: hidden;          /* reduce painting artifacts */
    -webkit-transform: translateZ(0);     /* create GPU layer */


}
.home-img-sm{
    display: none;
    width: 100%;
    margin: 20px 0 0 0;
    height: 50vh;
    background-image: url("./assests/photo1.png");
    background-size: cover;
    background-position: center;
}
#home-img-lg{
    display: block;
    height: 110vh;
    width: 50vw;
    background-position-x: -100px;
}
@media (max-width:1000px){
    .container-out{
        flex-direction: column;
    }
    .home-img-sm{
        display: block;
    }
    #home-img-lg{
        display: none;
    }
}

/* <===================TIMELINE===================> */

.timeline{
    display: block;
    background-color: var(--grey-color-light);
    float: left;
    position: relative;
    top: -30vh;
    width: 100%;
    backdrop-filter: blur(4px);
    padding: 8vh var(--horizontal-margin-spacing);
}
.timeline-container{
    display: flex;
    flex-direction: row;
    margin: 8vh 0;
}
.timeline-img{
    background-image: url("./assests/photo2.png");
    height: 70vh;
    width: 30vw;
    background-position: center;
    background-size: cover;
}
.timings{
    margin: 30px;
}
.timeline-container .text{
    padding: 1rem 0 1rem 4rem;
}
@media (max-width:1000px){
    .timeline{
        background-color: var(--grey-color);
        float: none;
        position: relative;
        top: 0;
        width: 100%;
        backdrop-filter: blur(0);
        height: fit-content;
    }
    .timeline-container{
        flex-direction: column;
    }
    .timeline-img{
        height: 50vh;
        width: 100%;
    }
}

/* <===================STORY===================> */

#story{
    padding-top: 10vh;
    display: flex;
    flex-direction: row;
    margin: 10vh 0;
}
#story h3{
    width: 40vw;
}
#story p{
    width: 40vw;
    text-align: justify;
    font-size: var(--h3-size);
    line-height: var(--h3-size);
}
/* ... */

